# ValidaCPF

CPF/VALIDACPF/: cpf_tkinter.py  main.py  pyproject.toml  test.py  valida_cpf.py
